--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+    <ion-menu contentId="main-content" type="overlay" color="primary">
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>COVID19Py</ion-list-header>
