--- a/src/app/colabora-con-la-app/colabora-con-la-app.page.html
+++ b/src/app/colabora-con-la-app/colabora-con-la-app.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
